<resources>
    <string name="app_name">onlineChat</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_to_continue">login to continue</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="sign_in">sign in</string>
    <string name="create_new_account">create new account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="confirm_password">confirm password</string>
    <string name="sign_up">sign up</string>
</resources>